--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ bytemuck = { version = "1.15", features = ["derive"] }
 glam = "0.27"
 rand = "0.8"
 env_logger = "0.11"
+half = "2.2"
 
 # Optional (fast math on nightly can be enabled by users if desired)
