--- a/crates/vireo-headless/Cargo.toml
+++ b/crates/vireo-headless/Cargo.toml
@@ -10,12 +10,13 @@ repository = "https://github.com/human/Vireo"
 [dependencies]
 vireo-core = { path = "../vireo-core" }
 serde = { version = "1.0", features = ["derive"] }
-serde_yaml = { workspace = true }
+serde_yaml = "0.9"
 rand_chacha = { workspace = true }
 clap = { version = "4.0", features = ["derive"] }
 image = "0.24"
 csv = "1.3"
-anyhow = "1"
-wgpu = { workspace = true }
+anyhow = "1.0"
+wgpu = "0.19"
 pollster = "0.3"
-bytemuck = "1.15"
+bytemuck = { version = "1.0", features = ["derive"] }
+half = "2.0"
