--- a/crates/vireo-app/Cargo.toml
+++ b/crates/vireo-app/Cargo.toml
@@ -4,11 +4,18 @@ version = "0.2.0"
 edition = "2021"
 authors = ["Human <human@example.com>"]
 license = "MIT"
-description = "Interactive Vireo ecosystem sandbox (stub for Sprint 1)"
+description = "Interactive Vireo ecosystem simulation viewer"
 repository = "https://github.com/human/Vireo"
 
 [dependencies]
 vireo-core = { path = "../vireo-core" }
+vireo-params = { path = "../vireo-params", features = ["serde"] }
+wgpu = { workspace = true }
 winit = "0.29"
 pollster = "0.3"
-env_logger = "0.11"
+serde_yaml = "0.9"
+clap = { version = "4.0", features = ["derive"] }
+log = "0.4"
+env_logger = "0.10"
+anyhow = "1.0"
+bytemuck = { version = "1.0", features = ["derive"] }
