--- a/crates/vireo-core/Cargo.toml
+++ b/crates/vireo-core/Cargo.toml
@@ -16,3 +16,4 @@ rand_chacha = "0.3"
 half = { workspace = true }
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
+vireo-params = { path = "../vireo-params", features = ["serde"] }
